# py-duration

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_duration/: __init__.py
tests/: test_import.py
