[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-duration"
version = "0.2.0"
description = "Parse and format human-readable duration strings like \"2h30m\" or \"1 day, 3 hours\""
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["duration", "time", "parse", "format", "human-readable", "timedelta"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-duration#readme"
Repository = "https://github.com/philiprehberger/py-duration"
Issues = "https://github.com/philiprehberger/py-duration/issues"
Changelog = "https://github.com/philiprehberger/py-duration/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_duration"]
